--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,8 @@
   },
   "dependencies": {
     "@mdi/font": "7.0.96",
+    "@toast-ui/vue-image-editor": "^3.15.2",
+    "fabric": "~4.2.0",
     "roboto-fontface": "*",
     "vue": "^3.3.0",
     "vue-router": "^4.2.5",
